examples/test/testpolicy5358.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5358
  namespace: namespace305
spec:
  podSelector:
    matchLabels:
      key43: value9
      key28: value6
      key27: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value13
          key22: value45
      podSelector:
        matchLabels:
          key42: value11
          key7: value35
          key19: value43
